I have added the req.body.parm inputs in both controllers for PUT and POST methods so that the swagger api can accept inputs, also i have updated the data types in the reservation schema
